@@ -18,7 +18,7 @@
 
 modname = 'pylint'
 
-numversion = (0, 12, 1)
+numversion = (0, 12, 2)
 version = '.'.join([str(num) for num in numversion])
 
 license = 'GPL'
@@ -44,7 +44,7 @@ long_desc = """\
 author = "Sylvain Thenault"
 author_email = "sylvain.thenault@logilab.fr"
 
-web = "http://www.logilab.org/Project/name/%s" % modname
+web = "http://www.logilab.org/project/name/%s" % modname
 ftp = "ftp://ftp.logilab.org/pub/%s" % modname
 mailinglist = "mailto://python-projects@logilab.org"
 
